objects/User.object
<CustomObject>
    <fields>
        <fullName>New_Field_06_06_Gerald__c</fullName>
        <description>Changing this Description so it can be merged to QA</description>
        <label>New Field 06.006 Gerald</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_06_2_Gerald__c</fullName>
        <description>Changing this Description so it can be merged to QA</description>
        <label>New Field 06.002 Gerald</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_06_3_Gerald__c</fullName>
        <description>Changing this Description so it can be merged to QA</description>
        <label>New Field 06.003 Gerald</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocuSignEmail__c</fullName>
        <label>DocuSign Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OMplusSyncEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable OM+ sync for this user</description>
        <inlineHelpText>If checked a user will be marked for export to OMplus platform. User will be enabled in OMplus once catalog synchronisation job is complete in Vlocity XOM Administration tab.</inlineHelpText>
        <label>OMplus Enabled</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>